pass1/Tree/297_Serialize_and_Deserialize_Binary_Tree_H_acpt/log
solution.cpp: In function 'int main()':
solution.cpp:102:28: error: 'root' was not declared in this scope
     string s = c.serialize(root);
                            ^
